namespace java com.heepay.rpc.risk.model

struct AsyncMsgVO {
   1: i32 status;
   2: string msg;

}